# BigDataArchitecture

./: README.md
Appendix_A/: 下载地址.txt
Appendix_B/: 下载地址.txt
big_data_cluster/: 下载地址.txt
chapter12/comprehensive_case_study/: README.md
chapter12/comprehensive_case_study/log_analysis/flink/comprehensive-case-flink/: pom.xml
chapter12/comprehensive_case_study/log_analysis/flink/comprehensive-case-flink/src/main/java/nudt/sose/bigdataseries/comprehensivecasestudy/flinkcomponent/: App.java  LogAnalysisFunction.java  LogAnalysisPostgreSQLSinkFactory.java  (+5 more)
chapter12/comprehensive_case_study/log_analysis/flink/comprehensive-case-flink/src/main/resources/: jdbc.properties
chapter12/comprehensive_case_study/log_analysis/flume/: nginx_hdfs.conf
chapter12/comprehensive_case_study/log_analysis/postgresql/: create_db.sh  log_analysis_db.sql
chapter12/comprehensive_case_study/webapp/: main.py  pyproject.toml
chapter12/comprehensive_case_study/webapp/comprehensive_case_webapp/: __init__.py  models.py
chapter12/comprehensive_case_study/webapp/deploy/: gunicorn.py
chapter12/comprehensive_case_study/webapp/tests/: __init__.py  locustfile.py
chapter4/: 下载地址.txt
chapter7/: 下载地址.txt
chapter8/: 下载地址.txt
chapter9/code/tradingbehavior/: JokerStrategyBuilder.java  Position.java  StockBar.java  StockBarExtractor.java  StreamingTradingDemo.java  TradingSignal.java  TradingSignalGenerator.java
chapter9/code/tradingdataserver/: BarDataServer.java
chapter9/data/: bars_15min.txt  bars_1min.txt  bars_1sec.txt
exercise_data/: topic.txt  users.txt
附录C/: 下载地址.txt
